# TubeTracks

./: Makefile  README.md  downloader.py  example.ytdownloader.conf  install_ffmpeg.ps1  pyproject.toml  youtube_mp3_downloader.py  ytdownloader_gui.py
.github/: copilot-instructions.md
.github/workflows/: build.yml  publish-pypi.yml
plugins/: __init__.py  base.py  dailymotion.py  instagram.py  reddit.py  soundcloud.py  spotify.py  tiktok.py  twitch.py  vimeo.py  youtube.py
tests/: test_plugins.py  test_smoke.py
