[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytdownloader"
version = "1.0.0"
description = "Enhanced YouTube to MP3 Downloader with config, archive, and network options"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "YouTube MP3 Downloader"}
]
keywords = ["youtube", "mp3", "download", "audio", "yt-dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2024.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ytdownloader = "youtube_mp3_downloader:main"
ytdl = "youtube_mp3_downloader:main"

[project.urls]
Homepage = "https://github.com/yourusername/ytdownloader"
Issues = "https://github.com/yourusername/ytdownloader/issues"

[tool.setuptools]
py-modules = ["youtube_mp3_downloader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
