[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytdownloader"
version = "1.0.1"
description = "Enhanced YouTube to MP3 Downloader with multi-platform support, config, archive, and network options"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "YouTube MP3 Downloader", email = "hayk.jomardyan@outlook.com"}
]
maintainers = [
    {name = "jomardyan"}
]
keywords = [
    "youtube",
    "mp3",
    "download",
    "audio",
    "yt-dlp",
    "tiktok",
    "instagram",
    "soundcloud",
    "spotify",
    "twitch",
    "media-downloader",
    "audio-converter"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 :: Tk",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2024.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.5",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.scripts]
ytdownloader = "downloader:main"
ytdl = "downloader:main"
ytdownloader-gui = "ytdownloader_gui:main"

[project.urls]
Homepage = "https://github.com/jomardyan/AudioDownload-YT"
Repository = "https://github.com/jomardyan/AudioDownload-YT.git"
"Bug Tracker" = "https://github.com/jomardyan/AudioDownload-YT/issues"
Documentation = "https://github.com/jomardyan/AudioDownload-YT/blob/main/README.md"
Changelog = "https://github.com/jomardyan/AudioDownload-YT/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = ["downloader", "ytdownloader_gui"]
packages = ["plugins"]
package-dir = {"" = "."}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.isort]
profile = "black"
line_length = 88
